# ml-pipeline

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  requirements-dev.txt  requirements-notebooks.txt  requirements.txt
.github/workflows/: ci.yml  tests.yml
configs/: example_linear.yaml  local.yaml  production.yaml
data/interim/: .gitkeep
notebooks/: example_analysis.ipynb
results/metrics/: .gitkeep
results/models/: .gitkeep
results/plots/: .gitkeep
src/: __init__.py  cli.py
src/experiment/: __init__.py  data.py  infra.py  models.py  pipeline.py  schemas.py
tests/: .gitkeep  __init__.py  test_data.py  test_infra_cache.py  test_integration.py  test_models.py  test_pipeline.py  test_schemas.py
